--- a/InsuranceProject-1/src/main/resources/application.properties
+++ b/InsuranceProject-1/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=InsuranceProject-1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/agiletask
+spring.datasource.url=jdbc:mysql://localhost:3306/16novbatch
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.port=8181
